--- a/rules
+++ b/rules
@@ -9,3 +9,6 @@ economist.com##.subscription-benefits
 economist.com##.newsletter-signup__text
 economist.com##.ds-media-promo, .ds-media-promo--podcasts
 /_app.js$domain=economist.com
+@@||instructure.com^$important,document,~extension
+@@||yorku.ca^$important,document,~extension
+@@||www.playonlinux.com^$important,document,~extension
