--- a/rules
+++ b/rules
@@ -1,6 +1,8 @@
 ! Title: SNHV
-! Version: 0.1
-! The Economist anti-paywall & unclutter
+! Description: Personal filter, compatible with AdGuard.
+! Version: 0.2
+! Expires: 1 days (update frequency)
+! --- The Economist anti-paywall & unclutter ---
 /_app.js$domain=economist.com
 ||evidon.com^$domain=economist.com
 ||tiqcdn.com^$domain=economist.com
@@ -9,9 +11,9 @@
 economist.com##.subscription-proposition
 economist.com##.subscription-benefits
 economist.com####.ds-media-promo, .ds-media-promo--podcasts
-! Smithsonian Magazine unclutter
+! --- Smithsonian Magazine unclutter ---
 /subscribe-circulation-promo-*$domain=smithsonianmag.com
 smithsonianmag.com##.signup-wrapper
-! York University whitelist
+! --- York University whitelist ---
 @@||instructure.com^$important,document,~extension
 @@||yorku.ca^$important,document,~extension
