--- a/rules
+++ b/rules
@@ -14,7 +14,7 @@ economist.com##.subscription-benefits
 economist.com####.ds-media-promo, .ds-media-promo--podcasts
 ! --- Smithsonian Magazine unclutter ---
 /subscribe-circulation-promo-*$domain=smithsonianmag.com
-!!thumbs-prod.si-cdn.com/*/*-web-cover.jpg$domain=smithsonianmag.com
+||thumbs-prod.si-cdn.com/*/*-web-cover.jpg$domain=smithsonianmag.com
 smithsonianmag.com##.signup-wrapper
 ! --- York University whitelist ---
 @@||instructure.com^$important,document,~extension
