--- a/rules
+++ b/rules
@@ -14,8 +14,8 @@ economist.com##.subscription-benefits
 economist.com####.ds-media-promo, .ds-media-promo--podcasts
 ! --- Smithsonian Magazine unclutter ---
 /subscribe-circulation-promo-*$domain=smithsonianmag.com
-||thumbs-prod.si-cdn.com/*/*-web-cover.jpg$domain=smithsonianmag.com
-smithsonianmag.com##.signup-wrapper
+smithsonianmag.com##.magazine-signup-form
+smithsonianmag.com##.newsletter-signup
 ! --- York University whitelist ---
 @@||instructure.com^$important,document,~extension
 @@||yorku.ca^$important,document,~extension
