--- a/rules
+++ b/rules
@@ -11,7 +11,7 @@
 /newsletter-signup.*$domain=economist.com
 economist.com##.subscription-proposition
 economist.com##.subscription-benefits
-economist.com####.ds-media-promo, .ds-media-promo--podcasts
+economist.com##.ds-media-promo, .ds-media-promo--podcasts
 ! --- Smithsonian Magazine unclutter ---
 /subscribe-circulation-promo-*$domain=smithsonianmag.com
 smithsonianmag.com##.magazine-signup-form
