--- a/rules
+++ b/rules
@@ -18,9 +18,9 @@ smithsonianmag.com##.magazine-signup-form
 smithsonianmag.com##.newsletter-signup
 ! --- York University whitelist ---
 @@||schulich.instructure.com^$important,document,~extension
-@@||yorku.ca^$important,document,~extension
+@@||*.yorku.ca^$important,document,~extension
 ! --- Government whitelist ---
-@@||canada.ca^$important,document,~extension
-@@||gc.ca^$important,document,~extension
-@@||ontario.ca^$important,document,~extension
-@@||on.ca^$important,document,~extension
+@@||*.canada.ca^$important,document,~extension
+@@||*.gc.ca^$important,document,~extension
+@@||*.ontario.ca^$important,document,~extension
+@@||*.on.ca^$important,document,~extension
