--- a/rules
+++ b/rules
@@ -1,6 +1,6 @@
 ! Title: SNHV
 ! Description: Personal filter, compatible with AdGuard.
-! Version: 2020.07.15.1
+! Version: 2020.07.20.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 ! --- The Economist anti-paywall & unclutter ---
@@ -18,9 +18,9 @@ smithsonianmag.com##.magazine-signup-form
 smithsonianmag.com##.newsletter-signup
 ! --- York University whitelist ---
 @@||schulich.instructure.com^$important,document,~extension
-@@||*.yorku.ca^$important,document,~extension
+@@||yorku.ca^$important,document,~extension
 ! --- Government whitelist ---
-@@||*.canada.ca^$important,document,~extension
-@@||*.gc.ca^$important,document,~extension
-@@||*.ontario.ca^$important,document,~extension
-@@||*.on.ca^$important,document,~extension
+@@||canada.ca^$important,document,~extension
+@@||gc.ca^$important,document,~extension
+@@||ontario.ca^$important,document,~extension
+@@||on.ca^$important,document,~extension
