--- a/rules
+++ b/rules
@@ -1,6 +1,6 @@
 ! Title: SNHV
 ! Description: Personal filter, compatible with AdGuard.
-! Version: 2020.09.29.1
+! Version: 2020.09.30.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 ! --- The Economist anti-paywall & unclutter ---
@@ -20,46 +20,12 @@ economist.com##.ds-media-promo, .ds-media-promo--podcasts
 smithsonianmag.com##.magazine-signup-form
 smithsonianmag.com##.newsletter-signup
 ! --- York University whitelist ---
-@@||schulich.instructure.com^
-@@||yorku.ca^
+@@||schulich.instructure.com^$important
+@@||yorku.ca^$important
 ! --- Government whitelist ---
-@@||canada.ca^
-@@||gc.ca^
-@@||ontario.ca^
-@@||on.ca^
+@@||canada.ca^$important
+@@||gc.ca^$important
+@@||ontario.ca^$important
+@@||on.ca^$important
 ! --- Good sites whitelist ---
-@@||portableapps.com^
-! --- LocalCDN whitelist ---
-@@||ajax.googleapis.com^
-@@||ajax.aspnetcdn.com^
-@@||ajax.microsoft.com^
-@@||cdnjs.cloudflare.com^
-@@||code.jquery.com^
-@@||cdn.jsdelivr.net^
-@@||fonts.googleapis.com^
-@@||yastatic.net^
-@@||yandex.st^
-@@||apps.bdimg.com^
-@@||libs.baidu.com^
-@@||cdn.staticfile.org^
-@@||cdn.bootcss.com^
-@@||mat1.gtimg.com^
-@@||lib.sinaapp.com^
-@@||upcdn.b0.upaiyun.com^
-@@||stackpath.bootstrapcdn.com^
-@@||maxcdn.bootstrapcdn.com^
-@@||netdna.bootstrapcdn.com^
-@@||use.fontawesome.com^
-@@||ajax.cloudflare.com^
-@@||akamai-webcdn.kgstatic.net^
-@@||gitcdn.github.io^
-@@||sdn.geekzu.org^
-@@||ajax.proxy.ustclug.org^
-@@||unpkg.com^
-@@||pagecdn.io^
-@@||cdn.css.net^
-@@||cdnjs.loli.net^
-@@||ajax.loli.net^
-@@||fonts.loli.net^
-@@||lib.baomitu.com^
-@@||cdn.bootcdn.net^
+@@||portableapps.com^$important
