--- a/rules
+++ b/rules
@@ -1,6 +1,6 @@
-! Title: SNHV
+! Title: HVN
 ! Description: Personal filter, compatible with AdGuard.
-! Version: 2020.10.27.1
+! Version: 2020.10.27.2
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 ! --- The Economist ---
