--- a/rules
+++ b/rules
@@ -1,6 +1,6 @@
-! Title: HVN Filter
+! Title: Personal filter
 ! Description: Personal filter, compatible with AdGuard.
-! Version: 2020.10.28.1
+! Version: 2020.11.01.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 ! --- The Economist ---
