--- a/rules
+++ b/rules
@@ -1,24 +1,27 @@
 ! Title: Personal filter
-! Description: Personal filter, compatible with AdGuard.
-! Version: 2021.04.21.1
+! Description: Personal filter, compatible with AdGuard, uBo, and .
+! Version: 2021.09.06.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 ! --- The Economist ---
-/_app.js$domain=economist.com
-||evidon.com^$domain=economist.com
-||tiqcdn.com^$domain=economist.com
-||tinypass.com^$domain=economist.com
-||economist.com/api/bulk-subscriber$domain=economist.com
-||authenticate.economist.com^$domain=economist.com
 /subscription-proposition.*$domain=economist.com
 /newsletter-signup.*$domain=economist.com
 economist.com##.subscription-proposition
 economist.com##.subscription-benefits
 economist.com##.layout-article-promo
 economist.com##.ds-media-promo, .ds-media-promo--podcasts
+! --- Financial Times ---
+ft.com##.o-message, .o-message--action, .o-message--digital-intro-subscription-promo
+ft.com##.article__content-sign-up
+ft.com##.n-content-layout__container
+ft.com##.instant-alert-cta, .js-instant-alert-cta
+ft.com##.o--if-js, .article-ribbon, .js-article-ribbon, .article--full-width-background
 ! --- Smithsonian Magazine ---
 /subscribe-circulation-promo-*$domain=smithsonianmag.com
 smithsonianmag.com##.magazine-signup-form
 smithsonianmag.com##.newsletter-signup
+! --- Coursera ---
+coursera.org###rendered-content > div.rc-MetatagsWrapper > div.rc-Course > div.rc-LearningAssistant:first-child > div._1ed7tibu.messages > div > div > div > div.rc-LearningAssistantPushMessage > div._10o07ul5.assistant-card
+coursera.org###main > div.course-content-body > div.rc-Welcome > div > div > div.rc-NpsModal:last-child > span > div.rc-Modal.popup > div.c-modal-content.card-rich-interaction
 ! --- others ---
 mondaq.com##.dropdown-menu
