--- a/rules
+++ b/rules
@@ -1,5 +1,5 @@
 ! Title: Personal filter
-! Description: Personal filter, compatible with AdGuard, uBo, and .
+! Description: Personal filter, compatible with AdGuard, uBo, and BPC.
 ! Version: 2021.09.06.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
