--- a/rules
+++ b/rules
@@ -1,11 +1,19 @@
 ! Title: Personal filter
 ! Description: Personal filter, compatible with AG, uBo, and BPC.
-! Version: 2022-05-31.2
+! Version: 2022-06-02.2
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
-! --- Canada ---
-@@||canada.ca^$document
-@@||gc.ca^$document
-! --- YorkU ---
-@@||yorku.ca^$document
-@@||us.azureauth.duosecurity.com^$document
+!---The Economist---
+||economist.com/optimizelyjs^
+||economist.com/engassets/*.js$domain=economist.com
+!---thuvienphapluat.vn---
+thuvienphapluat.vn###middle-column > div.bn-left:first-child
+https://cdn.thuvienphapluat.vn/Images/new.gif
+!--- Canada---
+@@||canada.ca^$important,document
+@@||gc.ca^$important,document
+! ---YorkU---
+@@||yorku.ca^$important,document
+@@||duosecurity.com^$important,document
+!---rezi.ai---
+@@||app.rezi.ai^$important,document
