--- a/rules
+++ b/rules
@@ -10,3 +10,8 @@ economist.com##.css-drxevm, .e1xre6611
 !---thuvienphapluat.vn---
 thuvienphapluat.vn###middle-column > div.bn-left:first-child
 https://cdn.thuvienphapluat.vn/Images/new.gif
+!---Canada Visa---
+canadavisa.com###div-ad-holder-1
+canadavisa.com###div-ad-holder-5
+canadavisa.com###div-ad-holder-9
+canadavisa.com###div-ad-holder-13
