--- a/rules
+++ b/rules
@@ -1,6 +1,6 @@
 ! Title: Personal filter
-! Description: Personal filter, compatible with AG, uBo, and BPC.
-! Version: 2022-07-20.1
+! Description: Personal filter, compatible with AdGuard, uBlock, Brave, and Bypass Paywall Clean.
+! Version: 2022-11-28.1
 ! Expires: 1 days (update frequency)
 ! Homepage: https://github.com/snhv/filter
 !---The Economist---
@@ -15,3 +15,5 @@ canadavisa.com###div-ad-holder-1
 canadavisa.com###div-ad-holder-5
 canadavisa.com###div-ad-holder-9
 canadavisa.com###div-ad-holder-13
+!---Brave---
+@@brave.com
